ABROAD client added

--- a/career.html
+++ b/career.html
@@ -472,7 +472,7 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="row">
+            <div class="row">
                 <div class="col-lg-12">
                     <div class="fancy-head text-center relative z-5 mb-45 wow fadeInDown"
                         style="visibility: visible; animation-name: fadeInDown;">
@@ -484,17 +484,321 @@
                 <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="partner">
                         <div class="partner-logo flex-center">
-                            <img width="80px" height="80px" src="img/collegeslogos/collegelogo1.jpg"
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Arizona-State-University.png"
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">christ university
+                            <h5><a href="#">Arizona-State-University
                                 </a></h5>
 
                         </div>
                     </div>
                 </div>
-            </div> -->
+                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Brown-University.png "
+                                alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">Brown-University
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px"
+                                src="img/collegeslogos/abroad/Carnegie-Mellon-University.png " alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">Carnegie-Mellon-University
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Columbia-University.png "
+                                alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">Columbia-University
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Cornell-University.png "
+                                alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">Cornell-University
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/George-Mason-University.png "
+                                alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">George-Mason-University
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px"
+                                src="img/collegeslogos/abroad/Georgia-Institute-Of-Technology.png " alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">Georgia-Institute-Of-Technology
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Harvard-University.png "
+                                alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">Harvard-University
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px"
+                                src="img/collegeslogos/abroad/Indiana-University-Of-Pennsylvania.png "
+                                alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">Indiana-University-Of-Pennsylvania
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Johns-Hopkins-University.png "
+                                alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">Johns-Hopkins-University
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px"
+                                src="img/collegeslogos/abroad/Massachusetts-Institute-Of-Technology.png "
+                                alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">Massachusetts-Institute-Of-Technology
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Northwestern-University.png "
+                                alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">Northwestern-University
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px"
+                                src="img/collegeslogos/abroad/Northwestern-University.png " alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">Northwestern-University
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Princeton-University.png "
+                                alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">Princeton-University
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Rice-University.png " alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">Rice-University
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Stanford-University.png " alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">Stanford-University
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/The-University-of-Arizona.png " alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">The-University-of-Arizona
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/The-University-of-Chicago.png " alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">The-University-of-Chicago
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/The-University-Of-Texas-At-Austin.png " alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">The-University-Of-Texas-At-Austin
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/University-of-California-Berkeley.png " alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">University-of-California-Berkeley
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/University-of-California-Riverside.png " alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">University-of-California-Riverside
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/University-Of-California-San-Diego.png " alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">University-Of-California-San-Diego
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/University-of-Pennsylvania.png " alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">University-of-Pennsylvania
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/University-Of-Washington.png " alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">University-Of-Washington
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/University-Of-Wisconsin-Madison.png " alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">University-Of-Wisconsin-Madison
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Yale-University.png " alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">Yale-University
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="row">
                 <div class="col-12">
