lead collection setted

--- a/career.html
+++ b/career.html
@@ -642,8 +642,8 @@
                 <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="partner">
                         <div class="partner-logo flex-center">
-                            <img width="80px" height="80px"
-                                src="img/collegeslogos/abroad/Northwestern-University.png " alt="college icone">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Northwestern-University.png "
+                                alt="college icone">
                         </div>
                         <div class="partner-name">
                             <h5><a href="#">Northwestern-University
@@ -668,7 +668,8 @@
                 <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="partner">
                         <div class="partner-logo flex-center">
-                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Rice-University.png " alt="college icone">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Rice-University.png "
+                                alt="college icone">
                         </div>
                         <div class="partner-name">
                             <h5><a href="#">Rice-University
@@ -676,10 +677,12 @@
 
                         </div>
                     </div>
-                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="partner">
                         <div class="partner-logo flex-center">
-                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Stanford-University.png " alt="college icone">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Stanford-University.png "
+                                alt="college icone">
                         </div>
                         <div class="partner-name">
                             <h5><a href="#">Stanford-University
@@ -687,10 +690,12 @@
 
                         </div>
                     </div>
-                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="partner">
                         <div class="partner-logo flex-center">
-                            <img width="80px" height="80px" src="img/collegeslogos/abroad/The-University-of-Arizona.png " alt="college icone">
+                            <img width="80px" height="80px"
+                                src="img/collegeslogos/abroad/The-University-of-Arizona.png " alt="college icone">
                         </div>
                         <div class="partner-name">
                             <h5><a href="#">The-University-of-Arizona
@@ -698,10 +703,12 @@
 
                         </div>
                     </div>
-                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="partner">
                         <div class="partner-logo flex-center">
-                            <img width="80px" height="80px" src="img/collegeslogos/abroad/The-University-of-Chicago.png " alt="college icone">
+                            <img width="80px" height="80px"
+                                src="img/collegeslogos/abroad/The-University-of-Chicago.png " alt="college icone">
                         </div>
                         <div class="partner-name">
                             <h5><a href="#">The-University-of-Chicago
@@ -709,10 +716,13 @@
 
                         </div>
                     </div>
-                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="partner">
                         <div class="partner-logo flex-center">
-                            <img width="80px" height="80px" src="img/collegeslogos/abroad/The-University-Of-Texas-At-Austin.png " alt="college icone">
+                            <img width="80px" height="80px"
+                                src="img/collegeslogos/abroad/The-University-Of-Texas-At-Austin.png "
+                                alt="college icone">
                         </div>
                         <div class="partner-name">
                             <h5><a href="#">The-University-Of-Texas-At-Austin
@@ -720,10 +730,13 @@
 
                         </div>
                     </div>
-                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="partner">
                         <div class="partner-logo flex-center">
-                            <img width="80px" height="80px" src="img/collegeslogos/abroad/University-of-California-Berkeley.png " alt="college icone">
+                            <img width="80px" height="80px"
+                                src="img/collegeslogos/abroad/University-of-California-Berkeley.png "
+                                alt="college icone">
                         </div>
                         <div class="partner-name">
                             <h5><a href="#">University-of-California-Berkeley
@@ -731,10 +744,13 @@
 
                         </div>
                     </div>
-                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="partner">
                         <div class="partner-logo flex-center">
-                            <img width="80px" height="80px" src="img/collegeslogos/abroad/University-of-California-Riverside.png " alt="college icone">
+                            <img width="80px" height="80px"
+                                src="img/collegeslogos/abroad/University-of-California-Riverside.png "
+                                alt="college icone">
                         </div>
                         <div class="partner-name">
                             <h5><a href="#">University-of-California-Riverside
@@ -742,10 +758,13 @@
 
                         </div>
                     </div>
-                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="partner">
                         <div class="partner-logo flex-center">
-                            <img width="80px" height="80px" src="img/collegeslogos/abroad/University-Of-California-San-Diego.png " alt="college icone">
+                            <img width="80px" height="80px"
+                                src="img/collegeslogos/abroad/University-Of-California-San-Diego.png "
+                                alt="college icone">
                         </div>
                         <div class="partner-name">
                             <h5><a href="#">University-Of-California-San-Diego
@@ -753,10 +772,12 @@
 
                         </div>
                     </div>
-                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="partner">
                         <div class="partner-logo flex-center">
-                            <img width="80px" height="80px" src="img/collegeslogos/abroad/University-of-Pennsylvania.png " alt="college icone">
+                            <img width="80px" height="80px"
+                                src="img/collegeslogos/abroad/University-of-Pennsylvania.png " alt="college icone">
                         </div>
                         <div class="partner-name">
                             <h5><a href="#">University-of-Pennsylvania
@@ -764,10 +785,12 @@
 
                         </div>
                     </div>
-                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="partner">
                         <div class="partner-logo flex-center">
-                            <img width="80px" height="80px" src="img/collegeslogos/abroad/University-Of-Washington.png " alt="college icone">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/University-Of-Washington.png "
+                                alt="college icone">
                         </div>
                         <div class="partner-name">
                             <h5><a href="#">University-Of-Washington
@@ -775,10 +798,12 @@
 
                         </div>
                     </div>
-                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="partner">
                         <div class="partner-logo flex-center">
-                            <img width="80px" height="80px" src="img/collegeslogos/abroad/University-Of-Wisconsin-Madison.png " alt="college icone">
+                            <img width="80px" height="80px"
+                                src="img/collegeslogos/abroad/University-Of-Wisconsin-Madison.png " alt="college icone">
                         </div>
                         <div class="partner-name">
                             <h5><a href="#">University-Of-Wisconsin-Madison
@@ -786,10 +811,12 @@
 
                         </div>
                     </div>
-                </div>                <div class="col-xl-3 col-lg-4 col-md-6">
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="partner">
                         <div class="partner-logo flex-center">
-                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Yale-University.png " alt="college icone">
+                            <img width="80px" height="80px" src="img/collegeslogos/abroad/Yale-University.png "
+                                alt="college icone">
                         </div>
                         <div class="partner-name">
                             <h5><a href="#">Yale-University
