--- a/career.html
+++ b/career.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <title>Bizz - Business Consulting and Agency HTML Template </title>
+    <title>Academiczz</title>
     <meta charset="utf-8">
-    <meta name="description" content="">
+    <meta name="description" content="The compleate solutions for students">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex">
 
