contact form removed

--- a/contact.html
+++ b/contact.html
@@ -213,7 +213,7 @@
     <!-- Contact us area end -->
 
     <!-- Contact form area end -->
-    <section class="contact-form  bg-light-white pt-100 pb-100" style="background-image: url('img/bg/bg-abt.jpg');"
+    <!-- <section class="contact-form  bg-light-white pt-100 pb-100" style="background-image: url('img/bg/bg-abt.jpg');"
         data-overlay="7">
         <div class="container">
             <div class="row">
@@ -270,7 +270,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Contact form area end -->
 
     <!-- Experience Cta start -->
